# Blog_App

./: .dockerignore  .env  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  Untitled Diagram.drawio  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
blog_app/: urls.py
blog_app/admin/: __init__.py  base_admin.py  contact_admin.py  post.py  user.py
blog_app/forms/: __init__.py  contact_us.py  post.py  search.py  user.py
blog_app/migrations/: 0001_initial.py  0002_alter_contactus_options_contactus_created_at_and_more.py
blog_app/models/: __init__.py  abstract.py  contact_us.py  post.py  user.py
blog_app/static/css/: style.css
blog_app/templates/blog_app/: 403.html  base.html  contact.html
blog_app/templates/blog_app/post/: _comments.html  add_comment.html  create.html  detail.html  edit.html  list.html  search_results.html
blog_app/templates/blog_app/shared/: _pagination.html
blog_app/templates/blog_app/user/: custom_login.html  user_profile.html  user_profile_form.html
blog_app/templates/registration/: logged_out.html  signup.html
blog_app/views/: contact_views.py  post.py  user.py  utils.py
config/: settings.py  urls.py
fake_data/post/: blog_app_post.sql
