[project]
name = "my-blog-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "cli-helpers==2.4.0",
    "click==8.2.0",
    "configobj==5.0.9",
    "django==5.2.1",
    "django-taggit==6.1.0",
    "pgcli==4.3.0",
    "pgspecial==2.2.1",
    "pillow==11.2.1",
    "prompt-toolkit==3.0.51",
    "psycopg==3.2.9",
    "psycopg2-binary==2.9.10",
    "pygments==2.19.1",
    "setproctitle==1.3.6",
    "sqlparse==0.5.3",
    "tabulate==0.9.0",
    "typing-extensions==4.13.2",
    "tzlocal==5.3.1",
    "wcwidth==0.2.13",
]
